// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar.vue should render regular navbar with search input open 1`] = `
<nav class="navbar is-search-open">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/solutions.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Solutions</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <form action="#" method="get" autocomplete="off" class="navbar-search"><input type="text" name="query" placeholder="Search" class="title is-small is-regular navbar-searchInput"></form>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <div class="navbar-dropdown">
        <ul class="navbar-dropdown-container">
          <li class="navbar-dropdown-profile">
            <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
            <div class="navbar-dropdown-userInfo">
              <p class="text is-semibold is-caption">Test user</p>
              <p class="text is-small">user@test.com</p>
            </div>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
          </li>
          <!---->
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
            <router-link to="[object Object]" class="text is-semibold is-caption is-txtGrey">
              UserDropdown.notifications
            </router-link>
            <!---->
          </li>
        </ul> <a href="/logout" class="navbar-dropdown-bottom">
          <div class="arrow"><img svg-inline="" src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
          <div class="title is-small is-txtAlert">UserDropdown.logout</div>
        </a>
      </div>
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown close after having opened it 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/solutions.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Solutions</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <form action="#" method="get" autocomplete="off" class="navbar-search"><input type="text" name="query" placeholder="Search" class="title is-small is-regular navbar-searchInput"></form>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <div class="navbar-dropdown">
        <ul class="navbar-dropdown-container">
          <li class="navbar-dropdown-profile">
            <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
            <div class="navbar-dropdown-userInfo">
              <p class="text is-semibold is-caption">Test user</p>
              <p class="text is-small">user@test.com</p>
            </div>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
          </li>
          <!---->
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
            <router-link to="[object Object]" class="text is-semibold is-caption is-txtGrey">
              UserDropdown.notifications
            </router-link>
            <!---->
          </li>
        </ul> <a href="/logout" class="navbar-dropdown-bottom">
          <div class="arrow"><img svg-inline="" src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
          <div class="title is-small is-txtAlert">UserDropdown.logout</div>
        </a>
      </div>
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown closed 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/solutions.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Solutions</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <form action="#" method="get" autocomplete="off" class="navbar-search"><input type="text" name="query" placeholder="Search" class="title is-small is-regular navbar-searchInput"></form>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <div class="navbar-dropdown">
        <ul class="navbar-dropdown-container">
          <li class="navbar-dropdown-profile">
            <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
            <div class="navbar-dropdown-userInfo">
              <p class="text is-semibold is-caption">Test user</p>
              <p class="text is-small">user@test.com</p>
            </div>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
          </li>
          <!---->
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
            <router-link to="[object Object]" class="text is-semibold is-caption is-txtGrey">
              UserDropdown.notifications
            </router-link>
            <!---->
          </li>
        </ul> <a href="/logout" class="navbar-dropdown-bottom">
          <div class="arrow"><img svg-inline="" src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
          <div class="title is-small is-txtAlert">UserDropdown.logout</div>
        </a>
      </div>
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown open 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/solutions.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Solutions</span></router-link>
    <router-link to="[object Object]" active-class="is-active" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <form action="#" method="get" autocomplete="off" class="navbar-search"><input type="text" name="query" placeholder="Search" class="title is-small is-regular navbar-searchInput"></form>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <div class="navbar-dropdown is-open">
        <ul class="navbar-dropdown-container">
          <li class="navbar-dropdown-profile">
            <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
            <div class="navbar-dropdown-userInfo">
              <p class="text is-semibold is-caption">Test user</p>
              <p class="text is-small">user@test.com</p>
            </div>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
          </li>
          <!---->
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
          </li>
          <li class="navbar-dropdown-iconLink">
            <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
            <router-link to="[object Object]" class="text is-semibold is-caption is-txtGrey">
              UserDropdown.notifications
            </router-link>
            <!---->
          </li>
        </ul> <a href="/logout" class="navbar-dropdown-bottom">
          <div class="arrow"><img svg-inline="" src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
          <div class="title is-small is-txtAlert">UserDropdown.logout</div>
        </a>
      </div>
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;
